# alphabill

./: .gitignore  .gitlab-ci.yml  .nancy-ignore  .trivyignore  LICENCE  Makefile  README.md  add-partition.sh  docker-compose.yml  docker-services.yml  go.mod  go.sum  go.work  go.work.sum  helper.sh  logging.md  main.go  resume-money.sh  resume-root.sh  resume-tokens.sh  resume-vd.sh  setup-testab.sh  sonar-project.properties  start-all.sh  start-money.sh  start-non-validator.sh  start-tokens.sh  start-vd.sh  start.sh  stop-all.sh  stop-money.sh  stop-root.sh  stop-tokens.sh  stop-vd.sh  stop.sh  tools.go  tygo.yaml
api/: go.mod  go.sum
ci/: .gitconfig  known_hosts
cli/: go.mod
client/: abclient.go  abclient_test.go  go.mod
cmd/: common_server.go  root.go  shard.go  shard_test.go
common/: go.mod
crypto/: encrypt_decrypt.go  secp256k1_signer.go  secp256k1_verifier.go  signer_test.go  types.go
docker/: money-pdr.json  tokens-pdr.json
docs/: bootstraping.md  logging.md  partition-description.md  pdr-1.json  rpc-api.md  transactions.md
predicates/wasm/wvm/instrument/wasm-instrument-rust/: .gitignore  Cargo.toml  Makefile  build.rs
predicates/wasm/wvm/instrument/wasm-instrument-rust/include/: instrument_wasm.h
predicates/wasm/wvm/instrument/wasm-instrument-rust/src/: error.rs  instrument.rs  lib.rs
predicates/wasm/wvm/instrument/wasm-instrument-rust/src/c_api/: errstr.rs  instrument.rs  mod.rs  types.rs
predicates/wasm/wvm/testdata/test_prog/test_prog/: Cargo.toml
wvm/testdata/missingHostAPI/: Cargo.toml
wvm/testdata/missingHostAPI/src/: lib.rs
(+2900 files in other folders)
