[package]
categories = ["no-std", "wasm", "embedded"]
name = "invalid_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# cdylib builds a a %.wasm file with `cargo build --release --target wasm32-unknown-unknown`
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = "debuginfo"


[dependencies]
