[package]
name = "p2pkh_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true


[dependencies]
host_api = { path = "../sdk/host_api" }

[features]
